test/bad/b8.erl
-module(b8).

% undefined function foo2
foo() -> foo2().